--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gsap": "^3.12.5",
     "next": "14.2.8",
     "phosphor-react": "^1.4.1",
     "react": "^18",
