--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@nextui-org/button": "^2.0.37",
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
