--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@nextui-org/button": "^2.0.37",
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
-    "next": "14.2.8",
+    "next": "^14.2.11",
     "phosphor-react": "^1.4.1",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
